@@ -14,6 +14,7 @@ documents those changes that are of interest to users and admins.
     in common/slurm_protocol_defs.h
  -- Avoid generating error when a job step includes a memory specification and 
     memory is not configured as a consumable resource.
+ -- Patch for small memory leak in src/common/plugstack.c
 
 * Changes in SLURM 2.1.0
 =============================
